# gpt-from-scratch-on-pytorch

./: Makefile  README.md  bigram.py  config.yaml  pyproject.toml  setup.py  transformer.py  transformer_non_scratch.py
config/: default_config.yaml
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: Transformer.ipynb
src/data/: data_processing.py
src/models/: diagnostics.py  transformer.py
src/utils/: config.py
